--- a/index.css
+++ b/index.css
@@ -16,10 +16,11 @@
     margin-left: -90px;
  width: 160px;
  height: 160px;
-    background-image: url('cat.jpg');
+    background-image: url('father.jfif');
     background-repeat: no-repeat;
 background-position-x: center;
 background-position-y: center;
+background-size:cover ;
 
 border-radius: 50%;
 z-index: -1;
